css/styles.css
.navbar-inverse{ /* assigning the top bar to the entire navbar div element */
    
}


.navbar-brand {
    margin: auto;
    height:80px;
}

.nav-image {
    height: 75px;
    margin-top: -10px;
}

.nav-text {
    font-size: 15pt;
    margin-left: 4px;
  font-family: Eurostile;
}

.navbar-nav li a {
    line-height: 80px;
    height: 80px;
    padding-top: 0;
}

h1,h2 {
    color:#fff;
    text-align: center;
    padding-top: 20px;
    padding-bottom: 20px;
    font-family: Arial, Helvetica, sans-serif ;
    
}

h1 {
  padding-top: 20px;
  padding-bottom: 50px;
  font-size:40px;
}

p {
  font-size: 17px;
}

.row {
  background-color:#a5b5b7;
  text-align: center;
  padding-bottom: 10px;
}

.brief {
  padding-bottom: 10px; 
}

body {
	background-color:#404040;
  padding-top: 120px;
  color:#fff;
  font-family: Arial, Helvetica, sans-serif ;
}

html {
  background-color:#404040;
}

.headshot {
    width:200px;
    height:200px;
    border-radius:100px;
  margin-bottom: 30px;
}

#registerInterest input {
  min-width:210px;
  height:47px;
  background:#fdfcfb;
  border-radius:4px 0 0 4px;
  font-size:16px;
  padding-left:10px;
  border:none;
}

#registerInterest button {
  margin-left: -4px;
  width:90px; 
  height:47px;
  border:none;
  background:#fed87f;
  font-weight:bold;
  font-size:16px;
  color:#fff;
  border-radius:0 4px 4px 0;
}

.profile {
    text-align: center;
    padding:30px;
}

.icon1 {
	color:#fed87f;
}

.icon2 {
	color:#fed87f;
}

.icon3 {
	color:#fed87f;
}

a.icon-twitter {
    color:#4099FF;   
}

.icon-linkedin {
    color:#0b62a6;
}

a.icon-blog {
    color:#63b1c9;   
}

a.icon-email {
    color:#e3434e;   
}

.centered {
	text-align:center;
	display:block;
}

footer {
  padding-bottom: 20px;
}

.register {
  padding-top:20px; 
  padding-bottom: 40px;
}

.col-md-4 {
  margin-top: 20px;
}

.col-md-4 p {
  padding-left:20px;
  padding-right:20px;
}

